--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <meta name="description" content="{{ .Page.Title }} - WebGPU quick reference and documentation">
+    <meta name="description" content="{{ .Page.Title }} - WebGPU and WGSL quick reference and documentation">
 
     <!-- <link rel="icon" type="image/png" href="/favicon-32.png" /> -->
     
@@ -12,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
 
@@ -22,7 +21,7 @@
 
     <title>{{ block "title" . }}
         {{ .Title }} - {{ .Site.Title }}
-        {{ end }}</title>
+    {{ end }}</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5GVD6TQJTW"></script>
