--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,17 +1,16 @@
-{{ define "main" }}
-    <main class="container">
-        <div class="row">
-            <div class="col">
-                <h1>{{ .Title }}</h2>
+{{ define "body" }}
+<div class="page">
+    {{ partial "header.html" . }}
+    <div class="main">
+        <div class="sidebar toggle-menu">
+            {{ partial "sidebar.html" . }}
+        </div>
+        <div class="content toggle-menu">
+            <div class="article">
+                {{ .Content }}
             </div>
         </div>
-        {{ range .Pages }}
-        <div class="row">
-            <article class="col">
-                <h2>{{ .Title }}</h2>
-                {{ .Content }}
-            </article>
-        </div>
-        {{ end }}
-    </main>
+    </div>
+    {{ partial "footer.html" . }}
+</div>
 {{ end }}
