--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,7 +7,7 @@
         </div>
         <div class="content toggle-menu">
             <div class="article">
-                {{ .Content }}
+                List{{ .Content }}
             </div>
         </div>
     </div>
