--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,16 +1,3 @@
-{{ define "body" }}
-<div class="page">
-    {{ partial "header.html" . }}
-    <div class="main">
-        <div class="sidebar toggle-menu">
-            {{ partial "sidebar.html" . }}
-        </div>
-        <div class="content toggle-menu">
-            <div class="article">
-                {{ .Content }}
-            </div>
-        </div>
-    </div>
-    {{ partial "footer.html" . }}
-</div>
+{{ define "content" }}
+    {{ .Content }}
 {{ end }}
