--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,3 +1,4 @@
+{{ partial "main-menu.html" . }}
 {{ if eq .Page.Type "wgsl" }}
     <div class="toc wgsl">
         {{ range where .Site.Sections "Type" "wgsl" }}
