--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,9 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,600;1,400&display=swap" rel="stylesheet">  
 
     <!-- Styles -->
     {{ $style := resources.Get "styles.scss" | toCSS | minify }}
@@ -34,7 +33,21 @@
 </head>
 <body>
     {{ block "body" . }}
+    <div class="page">
+        {{ partial "header.html" . }}
+        <div class="main">
+            <div class="sidebar toggle-menu">
+                {{ partial "sidebar.html" . }}
+            </div>
+            <div class="content toggle-menu">
+                {{ block "content" . }}
+                {{ end }}
+            </div>
+        </div>
+        {{ partial "footer.html" . }}
+    </div>
     {{ end }}
+
     <script>
         function toggleMenu() {
             console.log("toogleMenu()");
@@ -43,6 +56,9 @@
                 console.log(elements[i]);
                 elements[i].classList.toggle("menu-on");
             }
+        }
+        if (window.location.search.indexOf("menu") >= 0) {
+            toggleMenu();
         }
     </script>
 </body>
