--- a/layouts/reference/single.html
+++ b/layouts/reference/single.html
@@ -1,16 +1,5 @@
-{{ define "body" }}
-<div class="page">
-    {{ partial "header.html" . }}
-    <div class="main">
-        <div class="sidebar toggle-menu">
-            {{ partial "sidebar.html" . }}
-        </div>
-        <div class="content toggle-menu">
-            <div class="idl-block">
-                {{ .Content }}
-            </div>
-        </div>
-    </div>
-    {{ partial "footer.html" . }}
+{{ define "content" }}
+<div class="idl-block">
+    {{ .Content }}
 </div>
 {{ end }}
